# gpyutils

./: COPYING  Dockerfile  MANIFEST.in  README  README.rst  conversion.css  conversion.xhtml  gpy-cands  gpy-counts  gpy-depcands  gpy-depcheck  gpy-depgraph  gpy-drop-dead-impls  gpy-find-missing-meta  gpy-impl  gpy-list-pkg-impls  gpy-py2  gpy-showimpls  gpy-upgrade-checker  gpy-upgrade-impl  gpy-verify-installed-reqs  py-counts  py-depcands  py-depcheck  py-showimpls  py-upgrade-checker  pyproject.toml  setup.py  timeline.py  timeline.toml  tox.ini
.github/workflows/: ci.yaml
add-remotes/: gpy-add-remotes-from-homepage  gpy-add-remotes-from-name
gpyutils/: __init__.py  ansi.py  eclasses.py  implementations.py  packages.py  pycompat.py  util.py
gpyutils/scripts/: depgraph.py  drop_dead_impls.py  impl.py  junit2deselect.py  list_pkg_impls.py  pkgs_with_newest_stable.py  release_feed_opml.py  showimpls.py  to_pypi_eclass.py  upgrade_impl.py  verify_deps.py
obsolete/: README  gpy-counts  gpy-depcands
obsolete/html/: conversion.css  conversion.xhtml
other/: report-bugs-py311
timeline/: timeline.py
